Fix max width of receiver controls
to prevent overflows with long receiver names

--- a/web/static/css/components/receiver.css
+++ b/web/static/css/components/receiver.css
@@ -22,6 +22,7 @@
 
 .receiver--volume {
   flex: 1;
+  max-width: calc(100vw - (2 * $button-size));
 }
 
 .receiver__attached {
